/*
 * Copyright Â© 2025 Kaleido, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
 * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package io.kaleido.paladin.toolkit;

option java_multiple_files = true;

// Configure the RPC authorizer plugin
message ConfigureRPCAuthorizerRequest {
  string config_json = 1; // Plugin-specific configuration (JSON string)
}

message ConfigureRPCAuthorizerResponse {
}

// Authenticate a connection/session
message AuthenticateRequest {
  string headers_json = 1;  // HTTP headers as JSON
}

message AuthenticateResponse {
  bool authenticated = 1;
  optional string result_json = 2;  // Opaque authentication result string (plugin-specific format, only if authenticated=true)
}

// Authorize an RPC request
message AuthorizeRequest {
  string result_json = 1;  // Opaque authentication result string from Authenticate call (passed unchanged)
  string method = 2;         // RPC method name (e.g., "account_sendTransaction")
  string payload_json = 3;   // Request payload as JSON
}

message AuthorizeResponse {
  bool authorized = 1;
}

